# admissions-agent

./: .env.example  .gitignore  DOCUMENT_FORMATS_ADDED.md  Dockerfile  FINAL_DIAGNOSIS_REPORT.md  FINAL_FIXES.md  FIXED_ISSUES_REPORT.md  FIXES_GUIDE.md  Makefile  QUICKSTART.md  QUICK_START.md  RAG_ANALYSIS_REPORT.md  README.md  README_old.md  SETUP.md  SETUP_GUIDE.md  SUPPORTED_FORMATS.md  admissions.db  docker-compose.yml  main.py  pyproject.toml  pytest.ini  rag_diagnostics.py  requirements.txt  run.py  start.py  telegram_bot_diagnostics.py
data/: about.txt  admission_info.txt  contacts.txt  faculties.txt  foreigners.txt  info3.txt  info4.txt  info5.txt  university_info.txt
docs/: README.md  configuration.md  installation.md  navigation.md  quick-start.md
docs/architecture/: overview.md  project-structure.md
docs/components/: bot.md  rag-ai.md
docs/data/: seed-data.md
docs/development/: local-development.md
docs/troubleshooting/: faq.md
src/app/: config.py  db.py  main.py  models.py  schemas.py  seed_data.py
src/app/routers/: documents.py  faqs.py  programs.py  search.py  steps.py
src/bot/: handlers.py  keyboards.py  runner.py
src/data/seed/: admission_info.txt  admission_rules.txt  documents.json  faqs.json  programs.json  steps.json
src/rag/: document_loader.py  genai.py  ingest.py  retriever.py
src/rag/index/: chroma.sqlite3
src/tests/: test_api.py  test_bot.py  test_document_loader.py  test_rag.py
